Changelog Hotifx-Version 0.1.4:
    -Bugfix:
        - Offline-Mode: false's UUIDs are different ones than the Mojang One's from online-mode true.
                        this causes the /pt <offlineplayer> to get the wrong uuid, therefore displaying
                        incorrect data.
                        I updated the MojangAPI-Class to return the correct name<->uuid pair.

    - Messages:
        - Added the following new Messages (hidden):
            - CMD_NOTIF_PTR_EDIT_TYPE_IN_CHAT
            - CMD_SUC_PTR_EDIT_SAVED
            - CMD_SUC_PTR_EDIT_ABORTED
            - CMD_ERR_PTR_EDIT_UNKNOWN
        - These Messages are unused for now, it is planned to use them when the ptr editreward cmd is done

    - Rewards:
        - Edited Rewards now get saved (when the plugin disables & upon /ptr reload)
        - Editing Rewards is still disabled in this Version

    - Small stuff
        - Got rid of the old Logger, using JavaPlugin#getLogger now
            -> No more double PluginNames in the Console on other Platforms than spigot


Changelog Version 0.1.3:
    - Removed compiled Stuff from the final jar(s):
        - Removed internal, unneeded resources from being packed into the final Jar
        - Removed older classes, that weren't used anymore from the project

    - Created a MojangAPI Utility Class
            - Allows to lookup Player UUIDs from their Name
            - This Allows the Plugin to retrieve Playtime from Offline Players
            - This is currently limited to 6 Requests per Minute per Player

    - Rewrote the whole Message System. It is now based on Enums instead of plain Strings
        - Messages can now be hidden in the lang.yml file
            ->  This means they aren't in the File by default, but they exist in the Plugin.
                One could add them on his own to the File, and the Plugin would recognize and use them
        - The lang.yml File gets dynamically updated upon Missing Values