@@ -6,7 +6,7 @@
 
     <groupId>com.github.exobite.mc</groupId>
     <artifactId>PlaytimeRewardsRewrite</artifactId>
-    <version>0.1.4</version>
+    <version>0.1.5</version>
 
     <properties>
         <maven.compiler.source>17</maven.compiler.source>
@@ -22,6 +22,10 @@
         <repository>
             <id>placeholderapi</id>
             <url>https://repo.extendedclip.com/content/repositories/placeholderapi/</url>
+        </repository>
+        <repository>
+            <id>minecraft-repo</id>
+            <url>https://libraries.minecraft.net/</url>
         </repository>
     </repositories>
     <pluginRepositories>
@@ -45,7 +49,11 @@
                     <relocations>
                         <relocation>
                             <pattern>org.bstats</pattern>
-                            <shadedPattern>com.github.exobite.mc.playtimerewards.metrics</shadedPattern>
+                            <shadedPattern>com.github.exobite.mc.playtimerewards.reloc.metrics</shadedPattern>
+                        </relocation>
+                        <relocation>
+                            <pattern>me.lucko.commodore</pattern>
+                            <shadedPattern>com.github.exobite.mc.playtimerewards.reloc.commodore</shadedPattern>
                         </relocation>
                     </relocations>
                 </configuration>
@@ -56,6 +64,14 @@
                         <goals>
                             <goal>shade</goal>
                         </goals>
+                        <configuration>
+                            <artifactSet>
+                                <includes>
+                                    <include>me.lucko:commodore</include>
+                                    <include>org.bstats</include>
+                                </includes>
+                            </artifactSet>
+                        </configuration>
                     </execution>
                 </executions>
             </plugin>
@@ -95,6 +111,12 @@
             <artifactId>placeholderapi</artifactId>
             <version>2.11.1</version>
             <scope>provided</scope>
+        </dependency>
+        <dependency>
+            <groupId>me.lucko</groupId>
+            <artifactId>commodore</artifactId>
+            <version>1.10</version>
+            <scope>compile</scope>
         </dependency>
     </dependencies>
 </project>
