@@ -11,18 +11,18 @@ import com.github.exobite.mc.playtimerewards.external.PAPIManager;
 import com.github.exobite.mc.playtimerewards.listeners.Listeners;
 import com.github.exobite.mc.playtimerewards.listeners.PlaytimetopCommand;
 import com.github.exobite.mc.playtimerewards.web.AutoUpdater;
+import me.lucko.commodore.Commodore;
+import me.lucko.commodore.CommodoreProvider;
 import org.bukkit.Bukkit;
 import org.bukkit.command.CommandSender;
+import org.bukkit.command.PluginCommand;
 import org.bukkit.entity.Player;
-import org.bukkit.plugin.PluginDescriptionFile;
 import org.bukkit.plugin.java.JavaPlugin;
-import org.bukkit.plugin.java.JavaPluginLoader;
 import org.bukkit.scheduler.BukkitRunnable;
 import org.bstats.bukkit.Metrics;
 import org.jetbrains.annotations.NotNull;
 
 import javax.annotation.Nullable;
-import java.io.File;
 import java.util.*;
 import java.util.logging.Level;
 
@@ -41,28 +41,6 @@ public class PluginMaster extends JavaPlugin {
             instance.getLogger().log(level, part);
         }
     }
-
-    /*
-
-    TEST
-
-     */
-
-    public PluginMaster()
-    {
-        super();
-    }
-
-    protected PluginMaster(JavaPluginLoader loader, PluginDescriptionFile description, File dataFolder, File file)
-    {
-        super(loader, description, dataFolder, file);
-    }
-
-    /*
-
-    TEST END
-
-     */
 
     private Version bukkitVersion;
     private boolean pauseAsyncTimer = false;
@@ -101,9 +79,7 @@ public class PluginMaster extends JavaPlugin {
         //Load Metrics
         setupMetrics();
         //Load Game-Interaction Stuff
-        getCommand("Playtime").setExecutor(new PlaytimeCommand());
-        getCommand("Playtimetop").setExecutor(new PlaytimetopCommand());
-        getCommand("PlaytimeRewards").setExecutor(new PlaytimeRewardsCommand());
+        registerCommodoreCommands();
         getServer().getPluginManager().registerEvents(new Listeners(), this);
 
         //Load Placeholderapi, if it exists
@@ -164,6 +140,22 @@ public class PluginMaster extends JavaPlugin {
                 }
             }
         }.runTaskAsynchronously(this);
+    }
+
+    private void registerCommodoreCommands() {
+        PluginCommand ptCmd = getCommand("Playtime");
+        ptCmd.setExecutor(new PlaytimeCommand());
+        PluginCommand pttCmd = getCommand("Playtimetop");
+        pttCmd.setExecutor(new PlaytimetopCommand());
+        PluginCommand ptrCmd = getCommand("PlaytimeRewards");
+        ptrCmd.setExecutor(new PlaytimeRewardsCommand());
+
+        if(CommodoreProvider.isSupported()) {
+            Commodore com = CommodoreProvider.getCommodore(this);
+            CommodoreRegister.registerCompletionPlaytime(com, ptCmd);
+            //CommodoreRegister.registerCompletions(com, pttCmd);
+            //CommodoreRegister.registerCompletions(com, ptrCmd);
+        }
     }
 
     public Version getBukkitVersion(){
